samples/_failures_safe/1761250951_2c920f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a85259d3.c: In function ‘main’:
./samples/SAFE/__tmp_a85259d3.c:127:27: error: expected expression at end of input
  127 |                           sample_logs[i].level, sample_logs[i].message))
      |                           ^~~~~~~~~~~
./samples/SAFE/__tmp_a85259d3.c:127:27: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a85259d3.c:127:27: error: expected declaration or statement at end of input
